--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,12 +23,12 @@
 
 
 # Serve on GitHub
-url: https://geomoer.github.io/
-baseurl: "/moer-mhg-spatial/"
+url: https://gisma-courses.github.io/
+baseurl: "/r-spatial-econometry-basics/"
 
 ##### Title ###################################################################
-title: Environmental Informatics Research Group
-name: &name "Environmental Informatics Research Group" # &name is a YAML anchor which can be *referenced later
+title: GISMA course resources
+name: &name "GISMA course resources" # &name is a YAML anchor which can be *referenced later
 email: reudenbach@geo.uni-marburg.de
 description: >- # this means to ignore newlines until next item
   course course-materials geography remote-sensing marburg-open-educational-resource 
